--- a/src/client/components/EmployersMenu/profile.css
+++ b/src/client/components/EmployersMenu/profile.css
@@ -35,7 +35,7 @@ button:hover{
 }
 
 .subject h1,  h6 {
-	height: 100%;
+	height: auto;
 	margin: 0 auto !important;
 
 }
